# serializer version: 1
# name: TestRenderErrorSnapshot.test_generic_exception_snapshot
  '''
  ⚠️ **Invalid input**: bad input
  `rid: 01ARZ3NDEKTSV4RRFFQ69G5FAV`
  '''
# ---
# name: TestRenderErrorSnapshot.test_spec_error_snapshot
  '''
  ⚠️ **Spec validation failed**: agent 'atlas' is not configured for this tenant
  `rid: 01ARZ3NDEKTSV4RRFFQ69G5FAV`
  '''
# ---
# name: test_embed_render_snapshot[minimal_thinking]
  EmbedData(phase=<TurnPhase.THINKING: 'thinking'>, title='Working on it…', description='', color=3447003, footer='42s', details=None, notice=None)
# ---
# name: test_embed_render_snapshot[preview_present]
  EmbedData(phase=<TurnPhase.THINKING: 'thinking'>, title='Working on it…', description='> Let me check that for you.', color=3447003, footer='42s', details=None, notice=None)
# ---
# name: test_embed_render_snapshot[saturated_trail_with_preview_and_cost]
  EmbedData(phase=<TurnPhase.TOOL_RUNNING: 'tool_running'>, title='Working on it…', description='> Preview text describing the ongoing work.', color=3447003, footer='42s', details='+3 earlier\n✔️ Read a file\n🚫 Wrote a file\n✔️ Search issues (tracker)\n✔️ Listed files\n🔍 Searching files\n🖋️ Running a command', notice=None)
# ---
# name: test_embed_render_snapshot[single_tool]
  EmbedData(phase=<TurnPhase.TOOL_RUNNING: 'tool_running'>, title='Working on it…', description='', color=3447003, footer='42s', details='🖋️ Running a command', notice=None)
# ---
# name: test_embed_render_snapshot[terminal_done_no_cost]
  EmbedData(phase=<TurnPhase.DONE: 'done'>, title='', description='', color=5763719, footer='Atlas', details='Time: 42s\nTokens: 1.5k in / 320 out', notice=None)
# ---
# name: test_embed_render_snapshot[terminal_done_with_cost]
  EmbedData(phase=<TurnPhase.DONE: 'done'>, title='', description='', color=5763719, footer='Atlas', details='Time: 42s\nCost: $0.04\nTokens: 1.5k in / 320 out', notice=None)
# ---
# name: test_embed_render_snapshot[terminal_error_no_trail]
  EmbedData(phase=<TurnPhase.ERROR: 'error'>, title='Something went wrong.', description='Mention me to try again.', color=15548997, footer='Atlas', details='Time: 42s\nTokens: 0 in / 0 out', notice=None)
# ---
# name: test_embed_render_snapshot[terminal_error_with_reason]
  EmbedData(phase=<TurnPhase.ERROR: 'error'>, title='Something went wrong.', description='Mention me to try again.', color=15548997, footer='Atlas', details='Time: 42s\nTokens: 100 in / 50 out', notice=None)
# ---
# name: test_embed_render_snapshot[thinking_no_now]
  EmbedData(phase=<TurnPhase.THINKING: 'thinking'>, title='Working on it…', description='', color=3447003, footer=None, details=None, notice=None)
# ---
